Fixed some bugs on the mobile version

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -109,7 +109,7 @@ layout: default
 
     </div>
     <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
-      <img src="/assets/imgs/vr_icon.png" style="height:80px">
+      <img src="/assets/imgs/vr_icon.png" style="height:120px; margin-bottom:16px">
       <h3> Virtual Reality </h3>
       <br/>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
@@ -140,8 +140,7 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#whereisit" aria-expanded="false" aria-controls="whereisit">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> Where is it? </div>
+                  <div class="col-md"><i class="fa fa-plus fa-lg fa-fw"></i>&nbsp; Where is it? </div>
                 </div>
               </button>
             </h5>
@@ -158,8 +157,7 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#WhoisGoing" aria-expanded="false" aria-controls="WhoisGoing">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> Who's coming? </div>
+                  <div class="col-md"><i class="fa fa-plus fa-lg fa-fw"></i>&nbsp; Who's coming? </div>
                 </div>
               </button>
             </h5>
@@ -175,8 +173,7 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#whoCanAttend" aria-expanded="false" aria-controls="whoCanAttend">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> Who can attend? </div>
+                  <div class="col-md"> <i class="fa fa-plus fa-lg fa-fw"></i>&nbsp; Who can attend? </div>
                 </div>
               </button>
             </h5>
@@ -192,8 +189,7 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#Experience" aria-expanded="false" aria-controls="Experience">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> Do I need experience? </div>
+                  <div class="col-md"><i class="fa fa-plus fa-lg fa-fw"></i>&nbsp; Do I need experience? </div>
                 </div>
               </button>
             </h5>
@@ -209,8 +205,7 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#Rules" aria-expanded="false" aria-controls="Rules">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> Are there any rules? </div>
+                  <div class="col-md"><i class="fa fa-plus fa-lg fa-fw"></i> &nbsp; Are there any rules? </div>
                 </div>
               </button>
             </h5>
@@ -226,8 +221,7 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#Bring" aria-expanded="false" aria-controls="Bring">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> What should I bring? </div>
+                  <div class="col-md"> <i class="fa fa-plus fa-lg fa-fw"></i> &nbsp; What should I bring? </div>
                 </div>
               </button>
             </h5>
@@ -243,13 +237,12 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#Teams" aria-expanded="false" aria-controls="Teams">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> Can we form teams?</div>
+                  <div class="col-md"> <i class="fa fa-plus fa-lg fa-fw"></i> &nbsp; Can we form teams?</div>
                 </div>
               </button>
             </h5>
           </div>
-          <div id="Teams" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion" style="background-color:#d33f4e">
+          <div id="Teams" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
             <div class="card-body">
               Of course you can! We encourage people to work in teams of up to 5 people. You may opt-in to team formation during registration which will match you with an ideal team. You can work alone, but it won't be the same.
             </div>
@@ -260,8 +253,7 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#cost" aria-expanded="false" aria-controls="cost">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> Does it cost anything? </div>
+                  <div class="col-md"><i class="fa fa-plus fa-lg fa-fw"></i> &nbsp; Does it cost anything? </div>
                 </div>
               </button>
             </h5>
@@ -277,8 +269,7 @@ layout: default
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#reimbursements" aria-expanded="false" aria-controls="reimbursements">
                 <div class="row">
-                  <div class="col-md-1"> <i class="fa fa-plus fa-lg"></i></div>
-                  <div class="col-md"> Will there be travel reimbursements? </div>
+                  <div class="col-md"> <i class="fa fa-plus fa-lg fa-fw"></i> &nbsp; Will there be travel reimbursements? </div>
                 </div>
               </button>
             </h5>
