--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,7 +8,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #bfb6b6;
+  background-color: #878787;
 }
 
 .footer {
