--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -29,77 +29,11 @@ layout: default
 	<br/>
 	<br/>
 
-		<!-- <div class="row" >
-			<div class="col-md-2"></div>
-			<div class="col-md" style="text-align:left">
-				<br/>
-				<h2>Previous Workshops</h2>
-
-			</div>
-		</div> -->
-		
 		<div class="row" style="text-align: center">
-		
+
 			<div class="col-md-1"></div>
 			{% for pw in page.pastWorkshops %}
-<!-- 			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
-				<br/>
-				<p style="font-size:100px; text-align:center; color:#d33f4e;">
-					<i class="fa fa-briefcase fa-lg"></i>
-				</p>
-				<h4> Internship Success Panel </h4>
-				<p style="font-style:italic;"> Apr 11, 2018 </p>
-
-				<p> Learn about how to succeed in a summer internship from a panel of experienced students that have been interns for notable companies including Buzzfeed, IBM, Bloomberg, Coinbase, and Twitter.
-				</p>
-				
-
-				<p style="text-align:center;">
-					<a href="https://www.facebook.com/events/822430134623440/"><button class="btn btn-outline-danger">Facebook Event</button></a>
-				</p>
-				<br/>
-			</div>
-			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
-				<br/>
-				<p style="font-size:100px; text-align:center; color:#d33f4e;">
-					<i class="fa fa-cloud fa-lg"></i>
-				</p>
-
-				<h4> Demystifying the Cloud</h4>
-				<p style="font-style:italic;"> Mar 12, 2018 </p>
-				<p> Learn how to create, configure, and launch a server.  Additionally, we talk about how many different tools of the cloud, like nameservers, DNS, proxies, load balancing, and more, work together to make a server secure and performant.
-				</p>
-				<p style="text-align:center;">
-					<a href="https://www.facebook.com/events/941148822726114/"><button class="btn btn-outline-danger">Facebook Event</button></a>
-				</p>
-				<br/>
-			</div>
-			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
-				<br/>
-				<h4> How to succeed in a summer internship </h4>
-				<br/>
-				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
-				</p>
-				<p> Date: 01/01/01 </p><p style="text-align:center;">
-					<a href="https://placehold.com454"><button class="btn btn-outline-danger">Github Repository</button></a>
-				</p>
-				<br/>
-			</div>
-			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
-				<br/>
-				<p style="font-size:100px; text-align:center; color:#d33f4e;">
-					<i class="fa fa-laptop fa-lg"></i>
-				</p>
-				<h4> Local Hack Day</h4>
-				<p style="font-style:italic;"> Dec 2, 2018 </p>
-				<p> Local Hack Day is a 12 hour hack day that brings together the local hacker community to celebrate building awesome technology. Students around the world will  simultaneously host their own MLH Local Hack Day at their schools.
-				</p>
-				<p style="text-align:center;">
-					<a href="https://www.facebook.com/events/918866211609482/"><button class="btn btn-outline-danger">Facebook Event</button></a>
-				</p>
-				<br/>
-			</div> -->
-			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
+			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 15px 30px 15px;">
 				<br/>
 				<p style="font-size:100px; text-align:center; color:#d33f4e;">
 					<i class="fa {{ pw.icon }} fa-lg"></i>
