change lorem ipsum

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -81,10 +81,10 @@ layout: default
       <h2>Tracks and Workshops</h2>
       <br/>
       <p>
-          Tracks are optional specialized topics or technologies you can aim your project at. We'll have sponsors, workshops, and mentors to help you with your track-based project (as well as specialized prizes). Tracks are optional, make a hack you're interested in!
+          Tracks are optional specialized topics or technologies you can aim your project at. We'll have sponsors, workshops, and mentors to help you with your track-based project (as well as specialized prizes). Tracks are optional, make a hack you're interested in! Check back soon to see what our tracks will be this year!
       <br/>
       <p>
-          Check back soon to see what our tracks will be this year!
+          Last year's tracks:
       </p>
     </div>
   </div>
@@ -98,21 +98,21 @@ layout: default
       <p style="font-size:80px"><i class="fa fa-laptop fa-lg"></i><p/>
       <h3> Web and Mobile</h3>
       <br/>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
-
+      <p> Led by <a href="http://openwebbu.org/">OpenWeb BU</a>, hackers learned how to make a website or mobile app from the ground up.
+      </p>
     </div>
     <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
       <p style="font-size:80px"><i class="fa fa-gears fa-lg"></i><p/>
       <h3> Machine Learning </h3>
       <br/>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
-
+      <p> Led by <a href="mic.bu.edu">BU’s Machine Intelligence Community</a>, hackers learned how to get into the basics of several ML frameworks, and moved on to more advanced topics.
+      </p>
     </div>
     <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
       <img src="/assets/imgs/vr_icon.png" style="height:120px; margin-bottom:16px">
       <h3> Virtual Reality </h3>
       <br/>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
+      <p> Led by <a href="buarvr.com">BU AR/VR</a>, hackers got a jumpstart into creating in 3D. Then they created hacks on the Oculus Rifts we made available to them.
       </p>
     </div>
   </div>
@@ -127,7 +127,8 @@ layout: default
     <div class="col-md-12">
       <br />
       <h2>Frequently Asked Questions</h2>
-        <br/>
+      <p>The event is still a ways away, so check back closer to the hackathon for more information.</p>
+      <br/>
     </div>
   </div>
 
