--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -16,26 +16,26 @@ layout: default
 	  <br />
 	  {% for ph in page.pastHackathons %}
 	    <div class="row">
-	      <div class="col-sm-3" style="margin-left: 30px; text-align:center;">
+	      <div class="col-sm-3" style="margin-left: 20px; text-align:center;">
 	        <h2> {{ ph.name }} </h2>
-	        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-			  <ol class="carousel-indicators">
-			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-			  </ol>
-			  <div class="carousel-inner">
-			    <div class="carousel-item active">
-			      <img class="d-block w-100" src="{{ ph.location_pic | relative_url }}" alt="First slide">
-			    </div>
-			    <div class="carousel-item">
-			      <img class="d-block w-100" src="{{ ph.highlight_pic | relative_url }}" alt="Second slide">
-			    </div>
-			    <div class="carousel-item">
-			      <img class="d-block w-100" src="{{ ph.organizer_pic | relative_url }}" alt="Third slide">
-			    </div>
-			  </div>
-			</div>
+	        <div id="carouselExampleIndicators{{forloop.index}}" class="carousel slide" data-ride="carousel">
+					  <ol class="carousel-indicators">
+					    <li data-target="#carouselExampleIndicators{{forloop.index}}" data-slide-to="0" class="active"></li>
+					    <li data-target="#carouselExampleIndicators{{forloop.index}}" data-slide-to="1"></li>
+					    <li data-target="#carouselExampleIndicators{{forloop.index}}" data-slide-to="2"></li>
+					  </ol>
+					  <div class="carousel-inner">
+					    <div class="carousel-item active">
+					      <img class="d-block w-100" src="{{ ph.location_pic | relative_url }}" alt="First slide">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="{{ ph.highlight_pic | relative_url }}" alt="Second slide">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="{{ ph.organizer_pic | relative_url }}" alt="Third slide">
+					    </div>
+					  </div>
+					</div>
 	        <p>
 	          {{ ph.date }} <br />
 	          Directed by {{ ph.director }} <br />
@@ -45,7 +45,7 @@ layout: default
 
 	  	  <!--desktop view-->
 <!-- 	      <div class = "mobileHide"> -->
-		      <div class="mobileHide col-sm-8 box" style="background-color: #f2f2f2; margin-left:4%;margin-bottom:30px;">
+		      <div class="mobileHide col-sm-8 box" style="background-color: #f2f2f2; margin-left:2%;margin-bottom:30px;">
 		      	<div class="row" style="">
 		      		<div class="col-sm-4" style="margin-top: 15px;margin-bottom: 7.5px;padding-right:7.5px;">
 			      		<div class="attendees" style="background-color: white;height:100%;">
@@ -69,7 +69,7 @@ layout: default
 				        	</div>
 			        	</div>
 			        </div>
-				</div>
+						</div>
 
 		      	<div class="row">
 		      		<div class="col-sm-8" style="margin-top: 7.5px;margin-bottom: 7.5px;padding-right:7.5px;">
