--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@ layout: default
       <br/>
       <p> We'd love to have you on board. Click the below button to view the sponsor document, and feel free to contact us! </p>
       <br/>
-      <button href="{{ "/assets/sponsordoc.pdf" | relative_url }}" class="btn btn-outline-danger">Sponsor Document</button>
+      <a href="{{ "/assets/sponsordoc.pdf" | relative_url }}"><button class="btn btn-outline-danger">Sponsor Document</button></a>
     </div>
     <div class="col-md-1"></div>
   </div>
