changed history grid

--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -94,16 +94,7 @@ layout: default
 				</div>
 
 		        <div class="row">
-		      		<div class="col-sm-2" style="margin-top: 7.5px;margin-bottom: 15px;padding-right:7.5px;">
-			      		<div style="background-color: white;height:100%;">
-			      			<!-- <div class="row" style="height:100%;">
-			        			<h4 style="margin:15px 0px 15px 45px;text-align: left;">Participants:</h4> -->
-			        			<img src="{{ ph.attendee_graph | relative_url }}" class="img-fluid">
-			        		<!-- </div> -->
-			        	</div>
-			        </div>
-
-			        <div class="col-sm-10" style="margin-top: 7.5px;margin-bottom: 15px;padding-left:7.5px;">
+			        <div class="col-sm-12" style="margin-top: 7.5px;margin-bottom: 15px;padding-left:15px; padding-right:15px">
 			        	<div style="background-color: white;height:100%">
 			        		<div style="background-color: white; height:100%;">
 				      			<div class="row" style="height:100%;">
