--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -56,16 +56,17 @@ layout: default
 		      		<div class="col-sm-8" style="margin-top: 15px;margin-bottom: 7.5px;padding-left:7.5px;">
 			      		<div style="background-color: white; height:100%;">
 			      			<div class="row" style="height:100%;">
+			      				<div class="col-sm-8" style="margin-left: 30px;text-align: left;">
+				        			<h4 style="margin: 15px 0 0 0;">Prizes:</h4>
+				        			<p > {{ ph.prizes }} </p>
+				        		</div>
 				      			<div class="col-sm-3" style="position: relative;">
-				      				<div  style="position: absolute;top: 43%;left: 65%;height: 30%;width: 50%;margin: -15% 0 0 -25%;">
+				      				<div  style="position: absolute;top: 43%;right: 30%;height: 30%;width: 50%;margin: -15% 0 0 0;">
 				      					<i class="fa fa-trophy" style="font-size: 4rem"></i>
 
 				        			</div>
 				        		</div>
-				        		<div class="col-sm-8" style="margin-right: 15px;text-align: left;">
-				        			<h4 style="margin: 15px 0 0 0;">Prizes:</h4>
-				        			<p > {{ ph.prizes }} </p>
-				        		</div>
+
 				        	</div>
 			        	</div>
 			        </div>
