Fixed information, removed instagram, small style fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
         <li class="nav-item">
           <a href="https://www.facebook.com/bostonhacks/"><i class="fa fa-facebook-square fa-lg" style="padding:8px;"></i></a>
           <a href="https://twitter.com/boston_hacks"><i class="fa fa-twitter-square fa-lg" style="padding:8px;"></i></a>
-          <a href="https://www.instagram.com/bostonhacks/"><i class="fa fa-instagram fa-lg" style="padding:8px;"></i></a>
+          <!-- <a href="https://www.instagram.com/bostonhacks/"><i class="fa fa-instagram fa-lg" style="padding:8px;"></i></a> -->
         </li>
       </ul>
     </div>
