--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container-fluid text-center">
-  <br />
+  <br/>
   <br/>
   <div class="row">
 
@@ -55,11 +55,11 @@ layout: default
       </p>
       <hr width="50%">
 
-      <h6 style="color:#d33f4e">Instagram</h6>
+<!--  <h6 style="color:#d33f4e">Instagram</h6>
       <p>
         <a href="https://www.instagram.com/bostonhacks/" style="color:inherit">@bostonhacks</a>
       </p>
-      <hr width="50%">
+      <hr width="50%"> -->
     </div>
   </div>
 </div>
