--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,16 +9,16 @@ layout: default
     <div class="col-md-4" style="color:White">
       <br/>
       <br/>
-        <img class="img-fluid" style="width:50%; " src="{{ "/assets/imgs/terrierLogoWhite.png" | relative_url }}" id="terrierLogo">
-        <h1>{{site.nextHackathon.name}}</h1>
-        <p>
-          {{site.nextHackathon.date}}
-          <br>
-          {{site.nextHackathon.location}}
-        </p>
-        <br/>
-        <br/>
-      </div>
+      <img class="img-fluid" style="width:50%; " src="{{ "/assets/imgs/terrierLogoWhite.png" | relative_url }}" id="terrierLogo">
+      <h1>{{site.nextHackathon.name}}</h1>
+      <p>
+        {{site.nextHackathon.date}}
+        <br>
+        {{site.nextHackathon.location}}
+      </p>
+      <br/>
+      <br/>
+    </div>
     <div class="col-md-4" ></div>
   </div>
 
@@ -31,15 +31,15 @@ layout: default
       <h1 style="font-size:50px; color: #353535;"><i class="fa fa-code fa-md"></i> Attend </h1>
 
       <p> Thanks for the interest! Leave your email address below or follow us on social media to get notified when there's more information and registrations opens! </p>
-        <form action="https://bostonhacks.us18.list-manage.com/subscribe/post?u=f6d6fee90aa63339dffc8ccca&amp;id=8873714a91" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll form-group">
-            <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
-            <br />
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-outline-danger"></div>
-          </div>
-        </form>
+      <form action="https://bostonhacks.us18.list-manage.com/subscribe/post?u=f6d6fee90aa63339dffc8ccca&amp;id=8873714a91" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll form-group">
+          <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
+          <br />
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-outline-danger"></div>
+        </div>
+      </form>
 
 
 
@@ -51,9 +51,10 @@ layout: default
 
       <h1 style="font-size:50px; color: #353535;"><i class="fa fa-briefcase fa-md"></i> Sponsor </h1>
       <br/>
-      <p> We'd love to have you on board. Click the below button to view the sponsor document, and feel free to contact us! </p>
+      <p> We'd love to have you on board. Conact us at the email below! </p>
       <br/>
-      <a href="{{ "/assets/sponsordoc.pdf" | relative_url }}"><button class="btn btn-outline-danger">Sponsor Document</button></a>
+      <p><b>contact@bostonhacks.io</b>
+      <!-- <a href="{{ "/assets/sponsordoc.pdf" | relative_url }}"><button class="btn btn-outline-danger">Sponsor Document</button></a> -->
     </div>
     <div class="col-md-1"></div>
   </div>
@@ -73,19 +74,20 @@ layout: default
     </div>
   </div>
 
-  <br />
-  <br />
+  <br/>
+  <br/>
 
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <h2>Tracks and Workshops</h2>
       <br/>
       <p>
-          Tracks are optional specialized topics or technologies you can aim your project at. We'll have sponsors, workshops, and mentors to help you with your track-based project (as well as specialized prizes). Tracks are optional, make a hack you're interested in! Check back soon to see what our tracks will be this year!
-      <br/>
-      <p>
-          Last year's tracks:
+        Tracks are optional specialized topics or technologies you can aim your project at. We'll have sponsors, workshops, and mentors to help you with your track-based project (as well as specialized prizes). Tracks are optional, make a hack you're interested in! Check back soon to see what our tracks will be this year!
       </p>
+      <br/>
+      <h3>
+        Last year's tracks:
+      </h3>
     </div>
   </div>
 
@@ -95,14 +97,14 @@ layout: default
 
   <div class="row">
     <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
-      <p style="font-size:80px"><i class="fa fa-laptop fa-lg"></i><p/>
+      <p style="font-size:80px"><i class="fa fa-laptop fa-lg"></i></p>
       <h3> Web and Mobile</h3>
       <br/>
       <p> Led by <a href="http://openwebbu.org/">OpenWeb BU</a>, hackers learned how to make a website or mobile app from the ground up.
       </p>
     </div>
     <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
-      <p style="font-size:80px"><i class="fa fa-gears fa-lg"></i><p/>
+      <p style="font-size:80px"><i class="fa fa-gears fa-lg"></i></p>
       <h3> Machine Learning </h3>
       <br/>
       <p> Led by <a href="mic.bu.edu">BU’s Machine Intelligence Community</a>, hackers learned how to get into the basics of several ML frameworks, and moved on to more advanced topics.
