Changed small things around to have a consistent design at the moment

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@ layout: default
       <br/>
       <p> We'd love to have you on board. Conact us at the email below! </p>
       <br/>
-      <p><b>contact@bostonhacks.io</b>
+      <h4 style="color:#d33f4e">contact@bostonhacks.io</h4>
       <!-- <a href="{{ "/assets/sponsordoc.pdf" | relative_url }}"><button class="btn btn-outline-danger">Sponsor Document</button></a> -->
     </div>
     <div class="col-md-1"></div>
