--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -32,7 +32,7 @@ layout: default
     <div class="col-md-1"></div>
     <div class="col-md-4" style="border-left: 2px solid #f2f2f2">
       <h4> Next Boston<b>Hacks</b></h4>
-      <h1 style="color:#d33f4e"> 10/11/18 </h1>
+      <h1 style="color:#d33f4e"> Sept 10 2018 </h1>
       <br/>
       <br/>
       <br/>
