--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,7 @@ layout: default
 
   <div class="row" style="background-color:#f2f2f2;">
     <div class="col-md" style="margin-bottom: 40px">
-      <img src="/assets/imgs/schedule.png" style="max-width:80%">
+      <img src="{{ "/assets/imgs/schedule.png" | relative_url }}" style="max-width:80%">
       <br />
     </div>
   </div>
@@ -111,7 +111,7 @@ layout: default
       </p>
     </div>
     <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
-      <img src="/assets/imgs/vr_icon.png" style="height:120px; margin-bottom:16px">
+      <img src="{{ "/assets/imgs/vr_icon.png" | relative_url }}" style="height:120px; margin-bottom:16px">
       <h3> Virtual Reality </h3>
       <br/>
       <p> Led by <a href="http://www.buarvr.com/">BU AR/VR</a>, hackers got a jumpstart into creating in 3D. Then they created hacks on the Oculus Rifts we made available to them.
